created an html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html>
 
+   <head>
+     <meta charset="utf-8">
+      <title>Danae's Website</title>
+
+  </head>
+
+<body>
+	
+
+
+
+   <h1>Student at The New School</h1>
+
+     <p>Journalism + Design major </p>
+
+       <h3>Donald Trump is a cow</h3>
+
+       <p> Donald Trump is a cow Donald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cow</p>
+
+
+</body>
+
+
+
+</html>
