--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
        <p> Donald Trump is a cow Donald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cow</p>
 
 
+	<p>Im Danae Floyd, i'm 21 years old i was born in baltimore but raised in York, PA. I was born September 20, 1995. I am a journalism and design major who wants to make documentaries and my dream job would be to work for VICE. 
+
+I am very into social justice issues, history and reading books. Although with school and life it has been put on the back burner, i love sport. Baseball and football are my favorite sports and my favorite teams are the baltimore Ravens and Orioles. 
+
 </body>
 
 
