--- a/index.html
+++ b/index.html
@@ -4,26 +4,25 @@
    <head>
      <meta charset="utf-8">
       <title>Danae's Website</title>
+	   
+<link rel="stylesheet" type="text/css" href="style sheets/portfolio.css">   
+	   
 
   </head>
 
 <body>
-	
 
 
-
-   <h1>Student at The New School</h1>
+   <h1>GOLDENBLKGRL</h1>
 
      <p>Journalism + Design major </p>
 
-       <h3>Donald Trump is a cow</h3>
-
-       <p> Donald Trump is a cow Donald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cowDonald Trump is a cow</p>
+       <h3>ABOUT ME</h3>
 
 
-	<p>Im Danae Floyd, i'm 21 years old i was born in baltimore but raised in York, PA. I was born September 20, 1995. I am a journalism and design major who wants to make documentaries and my dream job would be to work for VICE. 
+	<p>I am Danae Floyd, i'm 22 years old i was born in Baltimore, raised in York, PA. I was born September 20, 1995. I am a journalism and design major who wants to make documentaries and my dream job would be to work for VICE. 
 
-I am very into social justice issues, history and reading books. Although with school and life it has been put on the back burner, i love sport. Baseball and football are my favorite sports and my favorite teams are the baltimore Ravens and Orioles. 
+To be honest, I am still trying to figure myself out but I love fashion and design, music, and art. My favorite era and genre of music is 90s-2000s Hip Hop and R&B and this porfolio will refrence Wu Tang Clan often. My favorite artist is Bothero and my favorite designer is Rei Kawakubo.  
 
 </body>
 
